--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -7,7 +7,9 @@
       An Angular app that fetches data from the
       <a href="https://pokeapi.co/" class="api-site">PokéAPI</a>
     </p>
-    <p>The first {{ pokecount }} pokemon in the list:</p>
+    <p>How many pokemon do you want to get?</p>
+    <input type="text" [(ngModel)]="pokecount" />
+    <button (click)="getPokeList()">Get Pokemon</button>
     <!-- if pokelist not empty  -->
     <ul *ngIf="pokelist">
       <!-- render each element in pokelist between li tags -->
