--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -1,3 +1,19 @@
+.btn {
+  display: block;
+  margin-top: 1rem;
+  font-size: 1rem;
+  border: 1px solid #da2d2d;
+  border-radius: 5px;
+  padding: 0.8rem;
+  background-color: #da4f4f;
+  color: #fff;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #da2d2d;
+}
+
 .pokelist-container {
   margin-top: 2rem;
   border: 1px solid #dfddc7;
