--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -9,7 +9,7 @@
     </p>
     <p>How many pokemon do you want to get?</p>
     <input type="text" [(ngModel)]="pokecount" />
-    <button (click)="getPokeList()">Get Pokemon</button>
+    <button class="btn" (click)="getPokeList()">Get Pokemon</button>
     <div class="pokelist-container">
       <!-- if pokelist not empty  -->
       <ul *ngIf="pokelist">
